--- a/app.json
+++ b/app.json
@@ -1,80 +1,73 @@
 {
   "name": "Lavanstax",
-  "description": "The world first İnstagram Userbot",
+  "description": "The world's first Instagram Userbot",
   "repository": "https://github.com/Ber4tbey/Lavanstax",
-  "keywords": ["node", "İnstagram", "owen"],
-   "stack": "container",
-  
+  "keywords": ["node", "Instagram", "own"],
+  "stack": "container",
   "env": {
     "USERNAME": {
-      "description": "İnstagram kullanıcı adınız.",
+      "description": "Your Instagram username.",
       "required": "true"
     },
-     "PASSWORD": {
-    "description": "instagram şifreniz.",
-    "required": "true",
-    "value": ""
-   },
+    "PASSWORD": {
+      "description": "Your Instagram password.",
+      "required": "true",
+      "value": ""
+    },
     "PREFIX": {
-      "description": "Botun komutları algılaması için komut başlangıcı.",
+      "description": "The prefix for the bot to recognize commands.",
       "value": "."
     },
-    
-   "LANGUAGE": {
-    "description": "Botunuzun dili (EN/TR/US)",
-    "required": "true",
-    "value": "TR"
-
-   },
-   "HEROKU_API_KEY": {
-    "description": "Heroku api keyiniz.",
-    "required": "true",
-    "value": ""
-
-   },
-   "HEROKU_APP_NAME": {
-    "description": "heroku app name",
-    "required": "true",
-    "value": ""
-
-   },
-  
-   "AFK_MESSAGE": {
-    "description": "Geçerli afk mesajınız",
-    "required": "true",
-    "value": "Hayat çok kısa, yapacak çok şey var...\nOnlardan birini yapıyorum.. Sahibim şuanda #AFK"
-   },
-   "BOTLOG_CHATID": {
-    "description": "Botlog chat ıd",
-    "required": "true",
-    "value": "0"
-   },
-   "SEND_READ": {
-    "description": "Bot mesajlara görüldü atsın mı?",
-    "required": "true",
-    "value": "false"
-   },
-   "PM_AUTO_BAN": {
-   "description": "DM koruması",
-   "required": "true",
-   "value": "true"
+    "LANGUAGE": {
+      "description": "The language of your bot (EN/TR/US)",
+      "required": "true",
+      "value": "EN"
+    },
+    "HEROKU_API_KEY": {
+      "description": "Your Heroku API key.",
+      "required": "true",
+      "value": ""
+    },
+    "HEROKU_APP_NAME": {
+      "description": "Your Heroku app name.",
+      "required": "true",
+      "value": ""
+    },
+    "AFK_MESSAGE": {
+      "description": "Your current AFK message",
+      "required": "true",
+      "value": "Life is too short, there's so much to do...\nI'm doing one of them right now.. My owner is currently #AFK"
+    },
+    "BOTLOG_CHATID": {
+      "description": "Botlog chat ID",
+      "required": "true",
+      "value": "0"
+    },
+    "SEND_READ": {
+      "description": "Should the bot mark messages as read?",
+      "required": "true",
+      "value": "false"
+    },
+    "PM_AUTO_BAN": {
+      "description": "DM protection",
+      "required": "true",
+      "value": "true"
+    },
+    "PM_MESSAGE": {
+      "description": "Your DM protection message",
+      "required": "true",
+      "value": "Hey! {mention} Hello. \n👩🏻‍💻I am {my_firstname}'s Secretary. \n❎Sorry, my owner has not approved you. \n🔃I will keep sending this message until you are approved \n\n✔️They will approve you soon. \n📜I'm adding you to the list for them to see your message and approve you.. \n \n \n📜Starting the listing process.... \n🗃Retrieving information.... \n✅Information retrieved.... \n \n \n👉🏻Your name: {first_name} \n👉🏻Your username: {username} \n \n📜You have been added to the list. "
+    },
+    "FOLLOW_SEND": {
+      "description": "Sends a DM when someone starts following you.",
+      "required": "true",
+      "value": "true"
+    }
   },
-  "PM_MESSAGE": {
-    "description": "DM koruması mesajınz",
-    "required": "true",
-    "value": "Hey! {mention} Merhaba. \n👩🏻‍💻Ben {my_firstname}  Sekreteriyim. \n❎Üzgünüm, Sahibim sizi onaylamamış. \n🔃Onaylayana kadar bu mesajı tekrar tekrar atacağım \n\n✔️Yakında sizi onaylar. \n📜Mesajınızı görmesi ve sizi onaylaması için sizi listeye alıyorum.. \n \n \n📜Listeye alma işlemi başlatıldı.... \n🗃Bilgiler alınıyor.... \n✅Bilgiler alındı.... \n \n \n👉🏻Adınız: {first_name} \n👉🏻Kullanıcı adınız: {username} \n \n📜Listeye alındınız. "
-   },
-  "FOLLOW_SEND": {
-    "description": "Sizi takip etmeye başlayanlara dm den mesaj gönderir.",
-    "required": "true",
-    "value": "true"
-   }
-
-  },
-    "addons": [{
-      "plan": "heroku-postgresql"
-    }],
-    "buildpacks": [{
-      "url": "heroku-community/apt"
-      }]
-  }
+  "addons": [{
+    "plan": "heroku-postgresql"
+  }],
+  "buildpacks": [{
+    "url": "heroku-community/apt"
+  }]
+}
